--- a/springboot-mybatis-redis/src/main/resources/application.properties
+++ b/springboot-mybatis-redis/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## 数据源配置
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## Mybatis 配置
@@ -12,11 +12,11 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 ## Redis数据库索引（默认为0）
 spring.redis.database=0
 ## Redis服务器地址
-spring.redis.host=127.0.0.1
+spring.redis.host=172.23.21.221
 ## Redis服务器连接端口
 spring.redis.port=6379
 ## Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=ucoJv1uW
 ## 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=8
 ## 连接池最大阻塞等待时间（使用负值表示没有限制）
